--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.7",
+    "vued3tree": "^5.1.0",
     "vuex": "^3.1.1",
     "webfontloader": "^1.6.28"
   },
