--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@octokit/rest": "^16.43.1",
     "arg": "^4.1.3",
     "axios": "^0.19.2",
+    "@marp-team/marp-core": "^0.15.2",
+    "@marp-team/marp-vue": "^0.0.1",
     "ced": "^1.0.0",
     "chokidar": "^3.4.0",
     "codemirror": "^5.54.0",
