--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "@hfelix/electron-localshortcut": "^3.1.1",
     "@hfelix/electron-spellchecker": "1.0.0-rc.5",
+    "@marp-team/marp-core": "^0.15.2",
+    "@marp-team/marp-vue": "^0.0.1",
     "@octokit/rest": "^16.35.0",
     "arg": "^4.1.2",
     "axios": "^0.19.0",
@@ -113,7 +115,7 @@
     "del": "^5.1.0",
     "devtron": "^1.4.0",
     "dotenv": "^8.2.0",
-    "electron": "^7.1.3",
+    "electron": "^7.1.8",
     "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.8",
