add markmap mode

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "release": "echo 'Please run \"build\" or \"release:{linux,mac,win}\"' && exit 1",
     "release:linux": "node .electron-vue/build.js && electron-builder build --linux",
     "release:mac": "node .electron-vue/build.js && electron-builder build --mac",
-    "release:win": "node .electron-vue/build.js && electron-builder build --win",
-    "build": "node .electron-vue/build.js && electron-builder",
+    "release:win": "node .electron-vue/build.js && electron-builder build --win", "build": "node .electron-vue/build.js && electron-builder",
     "build:bin": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:dev": "node .electron-vue/build.js",
@@ -69,6 +68,7 @@
     "keyboard-layout": "^2.0.16",
     "keytar": "5.2.0",
     "mermaid": "^8.4.6",
+    "markmap": "^0.6.1",
     "plist": "^3.0.1",
     "popper.js": "^1.16.1",
     "prismjs": "^1.19.0",
