--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "keyboard-layout": "^2.0.16",
     "keytar": "^6.0.1",
     "mermaid": "^8.5.2",
+    "markmap": "^0.6.1",
     "plist": "^3.0.1",
     "popper.js": "^1.16.1",
     "prismjs": "^1.20.0",
